refactor(docs): update system architecture documentation for frontend and backend
- Revised sections on technology stack and overall processes for clarity and accuracy.
- Consolidated and restructured content to enhance readability and maintainability.
- Updated last modified dates to reflect recent changes.

--- a/docs/system_architecture/前端架構概論.md
+++ b/docs/system_architecture/前端架構概論.md
@@ -1,162 +1,146 @@
 # 前端架構概論（Frontend Architecture Overview）
 
 > 狀態: 與現況程式碼同步  
-> 最後更新: 2025-11-04
+> 最後更新: 2025-11-15
 
 ---
 
-## 1. 概述與技術棧
+## 1. 技術棧與整體流程
 
-- 基礎: React 18 + Vite 5（開發/建置）
-- 3D 與動畫:
-  - three 0.160.0
-  - @react-three/fiber 8.15.19（R3F）
-  - @react-three/drei 9.105.6（Three.js helpers）
-  - @react-spring/web / @react-spring/three（動畫）
-- 環境變數（Vite）：
-  - `VITE_API_BASE`（後端 API Base，如空則相對 `/api` 路徑）
-  - `VITE_IMAGES_BASE`（影像靜態基底，預設 `/generated_images/`）
-- 主要互動對象：`backend/app/main.py` 所提供之 API 與 WebSocket `/ws/screenshots`
-
----
-
-## 2. 目錄與關鍵檔案
-
-- `frontend/src/App.jsx`：入口與模式切換，負責組合各模式元件與 hooks
-- 模式元件（七種視覺化模式）
-  - `frontend/src/ThreeKinshipScene.jsx`：
-    - SceneContent（預設 3D 景觀）
-    - PhylogenySceneContent（2D 親緣圖）
-    - IncubatorSceneContent（孵化室）
-  - `frontend/src/OrganicRoomScene.jsx`：有機房間模式（自動尋找 6 張相似圖）
-  - `frontend/src/SlideMode.jsx`：幻燈片模式（向量或親緣來源）
-  - `frontend/src/SearchMode.jsx`：搜尋模式（以圖/文字）
-  - `frontend/src/IframeMode.jsx`：Iframe 組合顯示
-- 系統元件
-  - `frontend/src/SoundPlayer.jsx`：透過 WS 接收 `sound_play` 訊息自動播放音效
-  - `frontend/src/api.js`：封裝 API 呼叫（搜尋、親緣、上傳等）
-  - `frontend/src/styles.css`：全域樣式
-- 協作用共用模組
-  - `frontend/src/hooks/`：跨模式共用的 React hooks（見 §5）
-  - `frontend/src/utils/iframeConfig.js`：Iframe 設定解析/正規化工具
+- **基礎環境**：Vite 5 + React 18。`src/main.jsx` 只做 root render，其餘邏輯都集中在 `App.jsx` 與 hooks。
+- **3D 與動畫**：three、@react-three/fiber、@react-three/drei 提供 Kinship/Organic 場景；html2canvas + 自行封裝 loader（`utils/html2canvasLoader.js`）負責畫面截圖。
+- **狀態處理**：全部以 React hooks 組合；沒有 Redux / MobX。全域的 WebSocket、字幕、截圖等都抽象成 hooks 供模式共用。
+- **環境變數**：
+  - `VITE_API_BASE`：API base URL，空值時走相對 `/api`。
+  - `VITE_IMAGES_BASE`：影像靜態路徑，預設 `/generated_images/`。
+  - `VITE_CLIENT_ID`：預設 client id（可被 URL `?client=` 覆寫）。
+  - `VITE_IFRAME_PERSIST_QUERY`、`VITE_COLLAGE_PERSIST_QUERY`：決定是否把 iframe/collage 設定寫回 URL。
+- **外部互動**：所有資料由 `backend/app` 暴露的 REST / WebSocket `/ws/screenshots` 提供，前端只負責視覺與控制。
 
 ---
 
-## 3. 模式切換與 URL 參數
+## 2. 目錄與核心模組
 
-- 由 `App.jsx` 解析 URL 查詢參數決定要渲染哪個模式，核心參數：
-  - `img=offspring_xxx.png`：錨點影像（多數模式需要）
-  - `phylogeny=true`：2D 親緣圖
-  - `incubator=true`：孵化室
-  - `organic_mode=true`：有機房間
-  - `slide_mode=true`：幻燈片
-  - `search_mode=true`：搜尋
-  - `iframe_mode=true`：Iframe 組合
-  - 其他：
-    - `slide_source=vector|kinship`（SlideMode 資料來源）
-- 影像 Base：`IMAGES_BASE = import.meta.env.VITE_IMAGES_BASE || "/generated_images/"`
-  - 前端各模式以「檔名」拼接為完整 URL：`imagesBase + filename`
+- `src/App.jsx`：解析 URL 參數 → 決定 DisplayMode → 注入對應元件。也是所有 hooks（字幕、WS、截圖、配置、音效、相機預設）的組合點。
+- `src/components/`：共用 UI（ControlPanel、ModeLayout、ScreenshotMessage）、Kinship 場景本體（`components/kinship/**`）、搜尋面板等。
+- `src/hooks/`：模式判斷 (`useModeParams`)、WebSocket (`useControlSocket`)、截圖 (`useScreenshotManager`)、字幕 (`useSubtitleCaption`)、iframe/collage 設定、相機預設、搜圖、幻燈片播放等。
+- `src/utils/`：iframe/collage 設定解析、collage 切片數學、slide mode 工具、html2canvas loader。
+- `src/styles/` 與每個模式專屬 `.css`：提供視覺樣式。
+- `src/api.js`：所有 REST 呼叫都集中在此，包含搜圖、親緣、截圖、拼貼、產生音效/字幕狀態等。
 
 ---
 
-## 4. 主要元件詳解
+## 3. DisplayModes 一覽
 
-> `App.jsx` 目前只處理「URL → 模式判斷 → 對應元件渲染」。其餘如字幕、截圖、iframe 配置、WebSocket 都委派給 hooks（§5）。
+`useDisplayMode()` 依 URL 旗標（`?iframe_mode=true` 等）決定渲染模式；若沒指定則走 Kinship。各模式對應元件如下：
 
-### 4.1 ThreeKinshipScene.jsx
-- 內含三個場景內容：
-  - SceneContent（預設 3D 景觀）
-    - 特色：ClusterFlower 叢集布局；中心 + 父母/子代/兄弟/祖先環狀排列；叢集可獨立旋轉/浮動；react-spring 漸入
-    - 參數：`autoplay`（預設開）、`step`（預設 30 秒）、`continuous`
-    - 視角：FOV 55；初始相機 (0, 1.2, 15)；OrbitControls 距離 4–60
-  - PhylogenySceneContent（2D 親緣圖）
-    - 特色：樹狀水平分層；Billboard 節點；外框依節點類型上色
-    - 布局常數：`PHYLO_LEVEL_GAP` 7.5；`PHYLO_NODE_SPACING` 6.2；`PHYLO_NODE_BASE_SIZE` 3.4
-    - 自動相機距離以節點分布計算，確保完整視野
-  - IncubatorSceneContent（孵化室）
-    - 特色：中心/上環（父）/下環（子）/外環（兄弟/祖先）；96 粒子霧氣（IncubatorMist）；彩色 Flow Overlay；分組漸進動畫
-    - 布局常數：最多 60 節點；`INCUBATOR_BASE_RADIUS` 4.4；`INCUBATOR_RADIUS_STEP` 3.3；`INCUBATOR_LEVEL_GAP` 4.6
-    - 視角：FOV 52；初始 (0, 2.4, 24)；OrbitControls 距離 6–48
+- **KINSHIP**（預設）：`components/kinship/KinshipScene.jsx`。同時支援 3D 群集、孵化室（`?incubator=true`）與 2D 親緣 (`?phylogeny=true`)。內含 FPS、相機追蹤、視角套用、截圖註冊。
+- **ORGANIC**：`OrganicRoomScene.jsx`。把錨點影像向量搜尋出 6 張類似圖，貼到立方體六面；內建巡航路徑，會自動挑選下一張 anchor。
+- **SLIDE**：`SlideMode.jsx`。以圖搜圖或親緣列表輪播，支援加速/暫停、Ctrl+R 顯示資訊、無限巡迴並把最後一張作為下一輪 anchor。
+- **SEARCH**：`SearchMode.jsx` + `hooks/useSearch.js`。提供「以圖搜圖」(先上傳再搜尋) 與「文字搜尋」。點擊結果可快速以該檔名再搜尋。
+- **IFRAME**：`IframeMode.jsx`。讀取 `useIframeConfig` 產出的配置，支援 grid/horizontal/vertical 佈局、面板拖拉調整比率以及本地設定面板；可從 WebSocket 收到遠端更新與 snapshot 還原。
+- **COLLAGE**：`CollageMode.jsx` + `useCollageControls.js`。把多張圖切片後混排，可遠端下發配置（`controlsEnabled=false`），亦可在本地調整列/行/圖數、混合模式、舞台尺寸並即時重算邊緣配對。
+- **COLLAGE_VERSION**：`CollageVersionMode.jsx`。走後端任務式的拼貼生成流程：挑圖 → 設定 rows/cols/mode/seed… → 呼叫 `/api/generate-collage-version` → 透過 `/progress` 查即時進度。
+- **GENERATE**：`GenerateMode.jsx`。依使用者選取的父圖、搜尋結果、文字提示與尺寸、格式、count 等參數，呼叫 `/api/generate/mix-two` 產生新 offspring。
+- **CAPTION**：`CaptionMode.jsx`。全畫面顯示 WebSocket/REST 帶來的 caption（例：策展文字）。
+- **STATIC**：`StaticMode.jsx`。單張全螢幕靜態圖，支援 `object_fit`、`object_position` 參數，並可提供截圖給後端。
+- **VIDEO**：`VideoMode.jsx`。播放 `/videos/圖像系譜學Video/<file>`，同樣可供截圖；點擊或 Enter/Sapce 切換靜音。
 
-### 4.2 OrganicRoomScene.jsx
-- 立方體房間（六面六圖），自動從錨點影像使用向量搜尋取回 6 張相似圖填滿
-- OrganicCruise（有機巡航）：相機在房間飄移；每 ~24 秒靠近一面並將其圖像設為新錨點 → 觸發下一輪搜尋
-- 立方體可緩慢自轉（`showInfo` 會停用動畫）
-- 參數：房間邊長 12；相機初始 (0,0,4.6)、FOV 58；OrbitControls 距離 2.5–8、target=(0,-1.2,0)
-
-### 4.3 SlideMode.jsx
-- 單圖全螢幕輪播；來源：
-  - `slide_source=vector`（預設）：向量相似度搜尋
-  - `slide_source=kinship`：親緣路徑（children → siblings → parents → ancestors）
-- 固定批次：`BATCH_SIZE=15`；顯示次序會先依 `DISPLAY_ORDER` 撿取再補齊
-- 使用 `searchImagesByImage()` 與 `fetchKinship()`（from `api.js`）
-- `cleanId()` 會剔除 `:en|:zh` 後綴，以檔名作為顯示與載入鍵值
-- 互動：
-  - `Ctrl+R` 顯示/隱藏檔名、進度與速度控制條
-  - 速度 0.5x–10x；可暫停/播放
-- 邏輯：播放到清單尾端後，以最後一張作為 anchor 再次搜尋（無限巡迴）
-
-### 4.4 SearchMode.jsx
-- 兩種搜尋：
-  - 以圖搜圖：上傳檔案 → `POST /api/screenshots` → 使用回傳的 `original_filename` 嘗試快速路徑 `backend/offspring_images/<original>` 查詢；失敗再以實際路徑回退
-  - 文字搜尋：`POST /api/search/text`
-- 結果網格顯示：縮圖、距離（distance）；點擊結果以該圖再次搜尋（以 `backend/offspring_images/<cleanId>` ）
-- 共通狀態：`searching`/`results`/`error`；基本錯誤提示與 UI 控制列
-
-### 4.5 IframeMode.jsx
-- 多面板組合顯示，佈局 `grid|horizontal|vertical`，最多 12 面板
-- 面板欄位：`src|label|ratio|image|params|url`；可由 URL 參數或後端 `GET /api/iframe-config` 提供
-- WebSocket 可即時接收後端推送的配置更新（`type: iframe_config`）
-- 本地配置模式：`Ctrl+R` 開關控制面板；套用後更新 URL 參數
-
-### 4.6 SoundPlayer.jsx
-- 監聽 WebSocket `/ws/screenshots`，接收：
-  - `sound_play`（播放指定檔名/URL 的音效）
-  - `sound_effect_ready`（音效生成完成事件，可選）
-- 以 `<audio>` 串流播放 `GET /api/sound-files/<filename>` 的內容
-
-### 4.7 api.js
-- 包裝常用 API：
-  - 向量搜尋：`POST /api/search/image`, `POST /api/search/text`
-  - 親緣圖：`GET /api/kinship?img=...&depth=...`
-  - 截圖上傳：`POST /api/screenshots`（回傳 `original_filename`, `absolute_path` 等）
-- 以 `VITE_API_BASE` 作為 Base URL，未指定時走相對路徑
+所有模式都包在 `ModeLayout.jsx`：該元件會佈局 before/after content、注入 `onCaptureReady`、掛上 `SoundPlayer` 與 `SubtitleOverlay`。
 
 ---
 
-## 5. 共用 Hooks 與工具（2025-11 版）
+## 4. URL / 狀態協調
 
-為了讓 `App.jsx` 保持精簡、便於協作，以下功能已抽象成 hooks：
+### 4.1 `useModeParams`
+- 解析 `window.location.search`，讀出 `img`、`slide_interval`、`sound_player`、`client` 等。
+- 透過 `useDisplayMode` 決定實際 Mode，並輸出 `incubatorMode` / `phylogenyMode`。特殊模式（iframe/slide/organic/static/video）會把 `shouldLoadKinshipData` 設為 false，以免多餘 API。
+- `clientId` 來源：`?client=`、環境變數 `VITE_CLIENT_ID`、預設 `default`。後端會用它鎖定 WS 訊息。
 
-- `useSubtitleCaption(clientId)` — `frontend/src/hooks/useSubtitleCaption.js`
-  - 初始載入 `fetchSubtitleState` / `fetchCaptionState`
-  - 正規化文字、語言、有效期間
-  - 依 `duration_seconds` 或 `expires_at` 自動清除，避免計時器散落於各元件
-  - 回傳 `{ subtitle, caption, applySubtitle, applyCaption }`
+### 4.2 Kinship 場景堆疊
+- `useKinshipData` 呼叫 `/api/kinship?img=<id>&depth=-1` 回傳親緣圖，並把結果塞進 3D clusters 或 2D/孵化 view。
+- `components/kinship` 子結構拆成 SceneClusters、IncubatorScene、PhylogenyScene，搭配 CameraTracker、FpsTracker、CameraPresetApplier、`useKinshipCapture`（註冊截圖）。
+- `useCameraPresets` + `ControlPanel` 提供視角儲存/刪除/套用。按 Ctrl+R 切換 `showInfo`，會顯示模式標籤、影像計數、FPS、相機矩陣、字幕/說明文字狀態。
 
-- `useScreenshotManager(clientId)` — `frontend/src/hooks/useScreenshotManager.js`
-  - 管理 WebSocket 佇列、重入鎖、計時器與訊息提示
-  - 將 `window.__APP_CAPTURE_SCENE` 的註冊/清理與 screenshot API 上傳集中在一處
-  - 對外提供
-    - `handleCaptureReady(fn)`：子元件（`IframeMode`, `SlideMode`, `ThreeKinshipScene`）在就緒時註冊截圖函式
-    - `enqueueScreenshotRequest(payload)`：接收 WS `screenshot_request`
-    - `markRequestDone(requestId)`：當 `screenshot_completed|failed` 時解除鎖定
-    - `screenshotMessage`：給 UI 顯示狀態用
+### 4.3 截圖／WebSocket／音效
+- `useControlSocket` 打 `/ws/screenshots`，自動送 `hello` (client id)、簡易 2 秒重連。
+- `useScreenshotManager` 管理自動截圖佇列與 `window.__APP_CAPTURE_SCENE`。收到 `screenshot_request` 會排隊呼叫子元件提供的 capture 函式（Kinship/Organic/Slide/Iframe/Static/Video 等各自負責轉換 DOM→blob）。
+- 若後端回報 `screenshot_completed/failed`，會清除鎖並在 UI 右上顯示提示。`SoundPlayer` 亦透過 `sound_play` 訊息自動載入 `/api/sound-files`.
 
-- `useIframeConfig({ initialParams, iframeMode, clientId, defaultConfig })` — `frontend/src/hooks/useIframeConfig.js`
-  - 解析 URL 參數 → `sanitize` 成可用的面板設定
-  - 根據 `iframeMode` 控制遠端載入與本地 fallback
-  - 中央化 URL 同步邏輯（當 `PERSIST_IFRAME_QUERY=true` 時才寫回）
-  - 回傳 `{ iframeActiveConfig, iframeControlsEnabled, handleLocalIframeConfigApply, applyRemoteIframeConfig }`
+### 4.4 字幕／說明文字
+- `useSubtitleCaption` 會在掛載時呼叫 `/api/subtitles`、`/api/captions` 取得初始狀態，並在收到 WS 更新時依 `duration_seconds` 或 `expires_at` 自動清除。
+- `SubtitleOverlay` 永遠掛在頁面底部；若進入 `CaptionMode` 則放大呈現說明文字。
 
-- `useControlSocket(options)` — `frontend/src/hooks/useControlSocket.js`
-  - 管理 WebSocket `/ws/screenshots`
-  - 內建重連機制（簡單的 2 秒重試）
-  - 依 `payload.type` 將事件分派給對應回呼：`screenshot_request`、`screenshot_completed|failed`、`sound_play`、`subtitle_update`、`caption_update`、`iframe_config`
+### 4.5 配置 Hooks（Iframe / Collage）
+- `useIframeConfig`：從 URL 參數建出初始設定，進入 iframe 模式時呼叫 `/api/iframe-config?client=...`，若後端有推送（WS `iframe_config`）就會鎖定為遠端版本並關閉本地控制。當 `VITE_IFRAME_PERSIST_QUERY=true` 時會把各面板參數壓回網址。
+- `useCollageConfig`：進入 collage 模式時拉 `/api/collage-config`。若 payload `source=client` 或 `global`，前端會顯示「遠端設定」並鎖住面板；沒有遠端時才允許本地調整。
 
-- 工具模組 `frontend/src/utils/iframeConfig.js`
-  - `parseIframeConfigFromParams` / `sanitizeIframeConfig` / `buildQueryFromIframeConfig`
-  - 移除重複 ID、補齊 col/row span、統一 ratio/gap/columns 的邏輯
+### 4.6 拼貼切片邏輯
+- `useCollageControls` 會載入 anchor 圖像的親緣資料 → 轉成 image pool → 依 rows/cols/image_count 切片。若開啟混合（mixPieces），還會以 `computeEdgesForImage` 取樣顏色，把切片拼進 mix board 並套動畫。
+- 為避免昂貴的 canvas 計算，有兩層快取：貼圖尺寸 (`IMAGE_DIMENSION_CACHE`) 與邊緣取樣 (`EDGE_SAMPLE_CACHE`)。
+- 任意模式若要截圖給後端，皆使用 html2canvas Loader；Slide/Static/Video/Iframe 等會在 `useSlideScreenshot` 或元件本身註冊 capture 函式。
+
+### 4.7 搜尋 / 生成工具模式
+- `useSearch` 負責處理檔案上傳、文字輸入、錯誤訊息、結果格式化與以結果再搜尋。
+- `CollageVersionMode` 與 `GenerateMode` 共用 `listOffspringImages()`；兩者都支援即時搜尋（文字或以圖搜圖）以挑素材，再呼叫後端的產生 API。
+
+---
+
+## 5. 資料流與 Mermaid 圖
+
+- **URL／模式決定**：瀏覽器載入時 `App.jsx` 透過 `useModeParams` 解析查詢參數，決定要掛載的模式元件與是否啟用字幕、音效。
+- **REST 呼叫**：各模式與 hooks（`useKinshipData`、`useSearch`、`useCollageControls`…）統一呼叫 `api.js`，這些函式再串 FastAPI `/api/*` 路由進行親緣、搜尋、生成、配置、截圖等操作。
+- **WebSocket 與廣播**：`useControlSocket` 維持與 `/ws/screenshots` 的單一連線，集中處理 `screenshot_request/completed`, `sound_play`, `subtitle_update`, `iframe_config`, `collage_config` 等事件，再分派給對應 hook。
+- **截圖回傳**：每個可截圖的模式在 `onCaptureReady` 時註冊 DOM/Canvas → Blob 的函式，由 `useScreenshotManager` 依 queue 執行並 `POST /api/screenshots`，成功後更新 UI 與 queue 狀態。
+- **靜態資源**：所有圖片以 `import.meta.env.VITE_IMAGES_BASE` 為前綴，實際指向後端靜態掛載 `/generated_images`；音效由 `SoundPlayer` 呼叫 `/api/sound-files` 拉網址，再串 WS 推播自動播放。
+
+```mermaid
+flowchart LR
+  subgraph Browser 前端
+    A[App.jsx + hooks]
+    B[模式元件\nKinship / Slide / Organic...]
+    C[ScreenshotManager & SoundPlayer]
+  end
+  subgraph Backend FastAPI
+    D[/REST /api/*/]
+    E{{WebSocket\n/ws/screenshots}}
+    F[(Metadata/檔案\noffspring, screenshots,\nsounds)]
+    G[(ChromaDB\n向量索引)]
+  end
+
+  A -->|URL 參數| B
+  B -->|fetch / mutate| D
+  D -->|JSON 回應| B
+  C <-->|事件| E
+  C -->|POST screenshot| D
+  D -->|寫入| F
+  D -->|索引/搜尋| G
+  E -->|iframe/collage 配置| A
+  E -->|sound_play / subtitle| C
+```
+
+---
+
+## 6. API 呼叫概覽（`src/api.js`）
+
+- **親緣與視角**：`fetchKinship`、`fetchCameraPresets`、`saveCameraPreset`、`deleteCameraPreset`。
+- **搜尋**：`searchImagesByImage`、`searchImagesByText`；以圖搜圖會先透過 `/api/screenshots` 上傳檔案取得路徑。
+- **截圖**：`uploadScreenshot`、`reportScreenshotFailure`。
+- **拼貼與配置**：`fetchCollageConfig`、`saveCollageConfig`、`generateCollageVersion`（multipart）、`generateCollageVersionFromNames`、`getCollageProgress`。
+- **生成**：`generateMixTwo`（直接串 `/api/generate/mix-two`）、`listOffspringImages`。
+- **字幕／音效**：`fetchSubtitleState`、`fetchCaptionState`、`fetchSoundFiles`。SoundPlayer 會把 `/api/sound-files` 的 URL 轉成 encode 後的絕對路徑。
+
+---
+
+## 7. 互動與熱鍵
+
+- `Ctrl+R`：在任何模式切換資訊層顯示；SlideMode 內部也沿用相同熱鍵來顯示標題/控制列。
+- `OrganicRoomScene`：房間自轉可被 `showInfo` 停止，以利展示；巡航每 ~24 秒換 anchor 並觸發搜尋。
+- `SlideMode`：速度範圍 0.5x–10x，尾張自動成為下一輪 anchor。
+- `VideoMode` / `StaticMode` / `IframeMode`：點擊即可準備截圖函式；Video 支援點擊/Enter/Space 切換靜音。
+- `ModeLayout`：統一把 `sound_player=false` 的模式關閉浮窗，也會把字幕 overlay 維持在最上層。
+
+以上描述對應目前 `frontend/` 目錄的實作，可作為日後增修模式或排查截圖／WS 流程時的參考。
 
 ### 協作建議
 
@@ -166,17 +150,7 @@
 
 ---
 
-## 5. 資料流與互動
-
-- 向量搜尋：`SlideMode / OrganicRoom / SearchMode` → api.js → 後端 `vector_store` → ChromaDB
-- 親緣圖：`KinshipScene / SlideMode(kinship)` → `GET /api/kinship` → metadata JSON 聚合
-- 截圖 → 上傳：前端（SearchMode 或其他）→ `POST /api/screenshots` → 後端儲存至 `screen_shots/`
-- 音效播放：管理端 API 觸發 `POST /api/sound-play` → WS 廣播 `sound_play` → SoundPlayer 播放
-- Iframe 配置：前端載入或等待 WS → 更新面板 `src` 切換
-
----
-
-## 6. 效能與使用者體驗
+## 8. 效能與使用者體驗
 
 - 圖片載入：
   - SlideMode 可加入「預先載入下一張」的簡單 prefetch（建議）
@@ -186,7 +160,7 @@
 
 ---
 
-## 7. 錯誤處理與相容性
+## 9. 錯誤處理與相容性
 
 - 後端 400/404/500 統一以文字訊息顯示；`SearchMode` 已做二段回退
 - 圖片 404：前端以 `onError` 設置替代外觀
@@ -194,7 +168,7 @@
 
 ---
 
-## 8. 開發與建置
+## 10. 開發與建置
 
 - 開發：
   ```bash
@@ -210,7 +184,7 @@
 
 ---
 
-## 9. Refactor 建議（前端）
+## 11. Refactor 建議（前端）
 
 - 路由/模式統一：
   - 抽出 `ModeRouter` 與 `useQueryParams()`（集中處理 URL 解析與狀態），避免各模式重複解析
@@ -230,7 +204,7 @@
 
 ---
 
-## 10. 已知差異/注意
+## 12. 已知差異/注意
 
 - `:en/:zh` 後綴的雙語向量索引目前僅清理腳本（後端）存在；前端僅在顯示時剔除後綴，實際資料仍單一語系索引
 - 後端尚未配置 CORS，中大型部署建議優先補上
