--- a/docs/system_architecture/後端架構概論.md
+++ b/docs/system_architecture/後端架構概論.md
@@ -1,303 +1,212 @@
 # 後端架構概論（Backend Architecture Overview）
 
 > 狀態: 與現況程式碼同步  
-> 最後更新: 2025-11-04
+> 最後更新: 2025-11-15
 
 ---
 
-## 1. 概述與技術棧
+## 1. 技術棧與啟動流程
 
-- 語言與框架：Python 3.13 + FastAPI 0.115.0（Uvicorn 0.30.6）
-- 依賴核心：
-  - 影像處理：Pillow 10.4.0
-  - 嵌入與搜尋：OpenAI Python SDK（text-embedding-3-small）、ChromaDB（PersistentClient）
-  - 圖像生成：google-genai（Gemini API）
-  - 音效生成：httpx（ElevenLabs Text-to-Sound Effects API）
-  - 旁白 TTS：httpx（OpenAI Audio Speech API）
-  - 設定：python-dotenv；Pydantic v2（models/schemas.py）
-- 靜態掛載：
-  - `/generated_images` → `settings.offspring_dir`
-  - `/generated_sounds` → `settings.generated_sounds_dir`
+- **Runtime**：Python 3.11+、FastAPI 0.115、Uvicorn 0.30。`app/main.py` 建立 app、掛上 CORS（允許所有來源）與靜態目錄 `/generated_images`、`/generated_sounds`，再註冊各領域 Router。
+- **核心依賴**：
+  - Pillow、numpy：影像處理、拼貼切片。
+  - google-genai：Gemini 影像混合／分析。
+  - openai SDK：文字/影像 embedding、TTS。
+  - chromadb PersistentClient：維護 offspring 圖像向量索引。
+  - httpx：ElevenLabs 音效 API、OpenAI TTS REST。
+- **生成與儲存**：所有新生成的圖片放在 `settings.offspring_dir`，對應 metadata (`backend/metadata/offspring_*.json`)；音效會寫到 `settings.generated_sounds_dir` 並對應 metadata。
 
 ---
 
-## 2. 目錄與模組
+## 2. 目錄與模組概覽
 
 ```
 backend/app/
-├── main.py                    # FastAPI 入口與全部路由
-├── config.py                  # Settings (環境變數→實際路徑/參數)
-├── services/
-│   ├── gemini_image.py        # 圖像混合生成（Gemini）
-│   ├── vector_store.py        # ChromaDB 整合與搜尋
-│   ├── image_analysis.py      # 圖像分析（OpenAI 視覺）
-│   ├── sound_effects.py       # 音效生成（ElevenLabs）
-│   ├── tts_openai.py         # 旁白 TTS（OpenAI Audio Speech）
-│   ├── collage_version.py     # 拼貼版本生成
-│   ├── collage_config.py      # 拼貼配置管理
-│   ├── screenshots.py         # 截圖上傳儲存
-│   ├── screenshot_requests.py # 截圖請求與 WebSocket 廣播
-│   ├── camera_presets.py      # 相機預設 CRUD
-│   └── iframe_config.py       # Iframe 多面板配置載入/儲存/解析
-├── models/
-│   ├── schemas.py             # Pydantic 請求/回應模型
-│   ├── iframe.py              # Iframe 模型/解析產物
-│   └── collage.py             # Collage 配置模型
-└── utils/
-    ├── embeddings.py          # OpenAI 嵌入/視覺描述封裝
-    ├── gemini_client.py       # Gemini 客戶端
-    ├── metadata.py            # 生成 metadata 檔案寫入
-    └── fs.py                  # 檔案系統 utilities
+├── main.py              # FastAPI 入口、CORS、靜態掛載
+├── config.py            # Settings dataclass + dotenv + 路徑正規化
+├── api/                 # 各領域 Router
+│   ├── storage.py       # iframe/collage 設定、相機預設、截圖上傳
+│   ├── generation.py    # Gemini 混合 & offspring 列表
+│   ├── indexing.py      # 嵌入索引 + 搜尋
+│   ├── kinship.py       # 親緣查詢/重建/統計
+│   ├── collage.py       # 拼貼任務佇列
+│   ├── screenshot.py    # 截圖分析、音效、bundle
+│   ├── sound.py         # 音效檔列出/串流、TTS、speak-with-subtitle、sound-play
+│   └── realtime.py      # subtitle/caption、screenshot request、WebSocket
+├── services/            # 業務邏輯層
+├── models/              # Pydantic schema（`schemas.py`、`collage.py`、`iframe.py`）
+└── utils/               # embeddings、Gemini client、檔案/metadata util
+```
+
+`backend/metadata/` 用來存：
+- `camera_presets.json`
+- `iframe_config*.json` + `snapshots/iframe_config/**`
+- `collage_config*.json`
+- `kinship_index.json`
+- 各 offspring/音效/拼貼的 metadata 檔案
+
+---
+
+## 3. 設定與環境變數（`config.Settings`）
+
+- **金鑰與模型**：`GEMINI_API_KEY`、`ELEVENLABS_API_KEY`、`OPENAI_API_KEY`、`MODEL_NAME`（預設 `gemini-2.5-flash-image-preview`）、`OPENAI_EMBEDDING_MODEL`、`OPENAI_VISION_MODEL`、`OPENAI_TTS_MODEL/VOICE/FORMAT`。可透過 `GENAI_USE_VERTEX` + `VERTEX_PROJECT/LOCATION` 切換 Vertex 端點。
+- **資源路徑**：
+  - `GENES_POOL_DIR` / `GENES_POOL_DIRS`：父圖來源（多個資料夾會自動展開）。
+  - `OFFSPRING_DIR`：生成結果；對應靜態路由 `/generated_images`。
+  - `METADATA_DIR`：各種 JSON metadata、config。
+  - `SCREENSHOT_DIR`：前端回傳場景截圖的儲存處。
+  - `GENERATED_SOUNDS_DIR`：音效/TTS 輸出 + `/generated_sounds` 靜態掛載。
+  - `CHROMA_DB_PATH`、`CAMERA_PRESETS_FILE`。
+- **其他參數**：`IMAGE_SIZE` 控制送進 Gemini/分析時的最大邊；所有相對路徑會在 `__post_init__` 中轉為 repo-root 絕對路徑，避免工作目錄不同造成錯誤。
+
+---
+
+## 4. API Router 速覽
+
+- **storage_router (`api/storage.py`)**
+  - `GET/PUT /api/iframe-config`：載入/覆寫配置；支援 `client` 參數分客戶端，也提供 `snapshot`, `snapshots`, `restore` 三組端點。
+  - `GET/PUT /api/collage-config`：載入/儲存 collage 控制台的預設圖集，回傳來源（global/client）與 `updated_at`。
+  - `GET/POST/DELETE /api/camera-presets`：Kinship 視角 CRUD。
+  - `POST /api/screenshots`：儲存前端上傳的 PNG/JPG，若帶 `request_id` 會呼叫 screenshot queue 標記完成/失敗。
+- **generation_router (`api/generation.py`)**
+  - `POST /api/generate/mix-two`：Gemini 混合生成，支援自訂 parents/prompt/尺寸/格式/resize 模式。
+  - `GET /api/offspring-images`：列出 offspring 目錄內所有檔名供前端選圖。
+- **indexing_router (`api/indexing.py`)**
+  - `/api/index/offspring`, `/api/index/image`, `/api/index/batch`：指示 ChromaDB 重新索引。
+  - `/api/search/text`, `/api/search/image`：向量搜尋（可指定 `include_deprecated`）。
+  - `/api/index/mark-deprecated`：掃描 `offspring_images/deprecated/` 並更新 metadata。
+- **kinship_router (`api/kinship.py`)**
+  - `GET /api/kinship?img=`：回傳 parents/children/siblings/ancestors 與圖形化資料。
+  - `POST /api/kinship/rebuild`、`GET /api/kinship/stats`：重建與檢視 kinship index。
+- **collage_router (`api/collage.py`)**
+  - `POST /api/generate-collage-version`：建立拼貼任務（支援行列數、旋轉、seed、模式等）。
+  - `GET /api/collage-version/{task_id}/progress`：輪詢任務狀態/結果。
+- **screenshot_router (`api/screenshot.py`)**
+  - `POST /api/analyze-screenshot`：Gemini 場景分析（可帶 `request_id`）。
+  - `POST /api/sound-effects`：ElevenLabs 產生音效並 attach 到指定 request。
+  - `POST /api/screenshot/bundle`：分析 + 產生音效的合併流程。
+- **sound_router (`api/sound.py`)**
+  - `GET /api/sound-files` / `GET /api/sound-files/{filename}`：音效清單與串流。
+  - `POST /api/sound-play`：透過 WebSocket 廣播播放命令。
+  - `POST /api/tts`：OpenAI TTS，並可選擇立即廣播播放。
+  - `POST /api/speak-with-subtitle`：一次性產生 TTS + 設定字幕。
+- **realtime_router (`api/realtime.py`)**
+  - `GET/POST/DELETE /api/subtitles`、`/api/captions`：透過 `SubtitleManager`/`CaptionManager` 管理 timed text 並同步到 WS。
+  - `GET /api/clients`：列出目前 WebSocket 客戶端。
+  - `POST /api/screenshots/request` → `GET /api/screenshots/{id}` → `POST /api/screenshots/{id}/fail`：管理後端排程的截圖任務。
+  - `WebSocket /ws/screenshots`：接收 `hello` 後綁定 client id，並推送 screenshot/sound/caption/iframe/collage 事件。
+
+---
+
+## 5. 資料流與 Mermaid 圖
+
+- **請求路徑**：任一 Client（前端或維運腳本）透過 REST `/api/*` 進入 Router，Router 依責任分派至 `services/*`。Services 會操作檔案系統（offspring、screenshots、sounds、metadata）、ChromaDB、以及外部 AI 供應商（Gemini/OpenAI/ElevenLabs）。
+- **即時事件**：`screenshot_queue` 與 `realtime_broadcaster` 配合 WebSocket `/ws/screenshots`，將 screenshot request、sound_play、iframe/collage/subtitle 更新推送到指定 client，也負責把前端上傳的截圖與狀態寫回 queue。
+- **資料湖與靜態輸出**：所有生成結果都寫入 `settings.*_dir`；其中影像與音效會透過 `StaticFiles` 直接服務，metadata 則是後續索引、分析及展示的重要依據。
+
+```mermaid
+flowchart LR
+  subgraph Clients
+    Frontend[前端瀏覽器]
+    Ops[維運腳本 / CLI]
+  end
+  subgraph FastAPI
+    Router[/Routers\n(api/*)/]
+    Services[[services.*]]
+    Queue[(screenshot_queue)]
+    Bus[(realtime_broadcaster)]
+  end
+  subgraph Storage
+    Files[(offspring / screenshots /\nsounds / metadata)]
+    Chroma[(ChromaDB)]
+  end
+  subgraph Providers
+    Gemini[(Gemini)]
+    OpenAI[(OpenAI\nEmbedding/TTS)]
+    ElevenLabs[(ElevenLabs\nSound Effects)]
+  end
+
+  Frontend -->|REST /api/*| Router
+  Ops -->|REST| Router
+  Frontend -->|WS /ws/screenshots| Bus
+  Router --> Services
+  Services -->|寫入/讀取| Files
+  Services -->|嵌入/搜尋| Chroma
+  Services -->|影像生成| Gemini
+  Services -->|Caption/TTS| OpenAI
+  Services -->|音效| ElevenLabs
+  Services -->|enqueue| Queue
+  Queue -->|事件| Bus
+  Bus -->|screenshot/sound/config| Frontend
+  Frontend -->|POST /api/screenshots| Router
 ```
 
 ---
 
-## 3. 設定（config.Settings）
+## 6. 主要服務（`backend/app/services/*`)
 
-- 關鍵環境變數（部分）：
-  - 金鑰：`GEMINI_API_KEY`, `ELEVENLABS_API_KEY`, `OPENAI_API_KEY`
-  - 模型：
-    - `MODEL_NAME`（預設 `gemini-2.5-flash-image-preview`）
-    - `OPENAI_EMBEDDING_MODEL`（預設 `text-embedding-3-small`）
-    - `OPENAI_VISION_MODEL`（預設 `gpt-4o-mini`）
-    - `OPENAI_TTS_MODEL`（預設 `gpt-4o-mini-tts`）, `OPENAI_TTS_VOICE`（預設 `alloy`）, `OPENAI_TTS_FORMAT`（預設 `mp3`）
-    - `GOOGLE_EMBEDDING_MODEL`（`text-embedding-004`）、`GOOGLE_IMAGE_EMBEDDING_MODEL`（`multimodalembedding`，目前未啟用）
-  - 目錄與檔案：
-    - `GENES_POOL_DIR`（單一路徑，相容）
-    - `GENES_POOL_DIRS`（多路徑，逗號分隔）
-    - `OFFSPRING_DIR`（預設 `backend/offspring_images`）
-    - `METADATA_DIR`（預設 `backend/metadata`）
-    - `SCREENSHOT_DIR`（預設 `screen_shots`）
-    - `GENERATED_SOUNDS_DIR`（預設 `backend/generated_sounds`）
-    - `CHROMA_DB_PATH`（預設 `backend/chroma_db`）
-    - `CAMERA_PRESETS_FILE`（預設 `backend/metadata/camera_presets.json`）
-  - 其他：
-    - `IMAGE_SIZE`（送入模型前的上限邊縮放，預設 1024）
-    - `GENAI_USE_VERTEX`, `VERTEX_PROJECT`, `VERTEX_LOCATION`, `ENABLE_IMAGE_EMBEDDING`（目前屬保留/未啟用）
-- 相對路徑均在 `__post_init__` 轉為專案根目錄下的絕對路徑，便於跨工作目錄執行
-
----
-
-## 4. 服務模組（services）
-
-### 4.1 gemini_image.py（圖像生成）
-- 來源：
-  - 基因池多目錄：`settings.genes_pool_dirs`（自動掃描 PNG/JPG）
-  - 指定父圖：支援傳入檔名/相對路徑/絕對路徑（解析順序依目錄列表）
-- 生成模型：`MODEL_NAME`（預設 Gemini 2.5 Flash Image Preview）
-- 生成路徑：`settings.offspring_dir`
-- 命名：`offspring_YYYYMMDD_HHMMSS_XXX.{png|jpeg}`
-- 輸出 metadata（JSON）：
-  - `parents`, `parents_full_paths`, `model_name`, `prompt`, `strength`, `created_at`, `output_image`, `output_format`, `output_size`
-- 介面：
-  - `generate_mixed_offspring(count=2)`：隨機抽樣父圖
-  - `generate_mixed_offspring_v2(parents|count|prompt|strength|output_*|resize_mode)`：擴充參數與尺寸策略（fit/cover/max_side/顯式寬高）
-
-### 4.2 vector_store.py（向量庫）
-- 客戶端：`chromadb.PersistentClient(path=settings.chroma_db_path)`
-- Collections：
-  - `offspring_images`（images）：以檔名作為 id，`metadatas` 內附帶生成 JSON 內容
-  - `text_queries`（可選）
-- 嵌入策略（現況）：
-  - 主要：OpenAI `text-embedding-3-small`
-  - 以圖搜圖：先嘗試用資料庫已存在之向量（`include=["embeddings"]`），若無則 `embed_image()`（實作：先產 caption 再 text-embedding）
-- 索引：
-  - `index_offspring_image(basename, force=False)`：索引單張（抓 `backend/metadata/<stem>.json` 合併 metadata）
-  - `sweep_and_index_offspring(limit=None, force=False)`：遍歷目錄（指令端點化為 `/api/index/offspring`）
-  - `index_offspring_batch(batch_size=50, offset=0, force=False)`：分頁索引（穩定順序）
-- 搜尋：
-  - `search_images_by_text(query, top_k)`
-  - `search_images_by_image(image_path, top_k)`：彈性路徑解析 + DB 命中快取 → 回退 embedding
-- 注意：檔頭註解仍描述「由 Google GenAI 產生向量」已不符現況，後續會修正註解以對齊 OpenAI 策略
-
-### 4.3 screenshots.py / screenshot_requests.py（截圖與協調）
-- 上傳：`POST /api/screenshots`（multipart）
-  - 儲存於 `settings.screenshot_dir`
-  - 回傳：`filename`, `original_filename`, `absolute_path`, `relative_path`（若有）
-  - 若附帶 `request_id`：完成後標記該請求為 completed
-- 請求協調（WS）：`/ws/screenshots`
-  - `screenshot_request`：後端建立 → 廣播
-  - `screenshot_completed` / `screenshot_failed`
-  - `sound_play`：音效播放請求（可目標特定 `client_id`）
-  - `sound_effect_ready`：音效生成完成（供前端 UI 顯示，可選）
-  - `iframe_config`：Iframe 配置更新
-  - `collage_config`：拼貼配置更新
-  - `subtitle_update`：字幕更新
-  - `caption_update`：說明文字更新
-
-### 4.4 image_analysis.py / sound_effects.py（分析與音效）
-- 圖像分析：OpenAI `gpt-4o-mini` 生成 `summary` 與 `segments`
-- 音效生成：ElevenLabs `eleven_text_to_sound_v2`（`duration_seconds`, `prompt_influence`, `loop`, `output_format`）
-
-### 4.5 tts_openai.py（旁白 TTS）
-- 端點：`POST /api/tts`
-- 請求：`{ text, instructions?, voice?, model?, output_format?, filename_base?, speed?, auto_play?, target_client_id? }`
-- 行為：呼叫 OpenAI Audio Speech API → 寫入 `generated_sounds/` → 回傳 `{ tts: {...}, url }`
-- 若 `auto_play=true`：透過 WebSocket 廣播 `sound_play` 給指定 `client_id`
-- 可選：`speed`（0.25–4.0），控制語速（預設 1.0）；`instructions` 用於指定語氣/口音/說話風格
-- 環境變數：
-  - `OPENAI_TTS_MODEL`（預設 `gpt-4o-mini-tts`）
-  - `OPENAI_TTS_VOICE`（預設 `alloy`）
-  - `OPENAI_TTS_FORMAT`（預設 `mp3`）
-- 綁定流程：
-  - `POST /api/analyze-screenshot`
-  - `POST /api/sound-effects`
-  - `POST /api/screenshot/bundle`：分析 + 產音，一次完成並（若有）回寫到截圖請求紀錄
-
-### 4.6 collage_version.py（拼貼版本生成）
-- 功能：將多張圖像切片後重新組合，產生新的拼貼版本
-- 匹配 / 處理模式：`kinship`、`luminance`、`wave`、`source-cluster`、`random`、`weave`、`rotate-90`
-- `allow_self=true` 或 `mode=rotate-90` 時允許單張圖；其餘模式需至少兩張圖
-- `base` 參數支援 `first` / `mean`（目前 `mean` 仍等同第一張）
-- 任務管理：`CollageTaskManager` 追蹤非同步生成進度
-- 端點：
-  - `POST /api/generate-collage-version`：建立生成任務（返回 `task_id`）
-  - `GET /api/collage-version/{task_id}/progress`：查詢進度與結果
-- 主要參數範圍：
-  - `rows`/`cols`：1-300（預設 12×16）
-  - `resize_w`: 256-8192 px（預設 2048）
-  - `pad_px`: 0-100；`jitter_px`: 0-50
-  - `rotate_deg`: 0-45 度
-  - `format`: `png`、`jpg`、`webp`；`quality` 僅在 `jpg/webp` 有效
-  - `return_map`: 控制是否回傳 tile mapping
-
-### 4.7 collage_config.py（拼貼配置管理）
-- 功能：管理拼貼模式的配置（圖像列表、網格參數等）
-- 儲存位置：
-  - 全域：`backend/metadata/collage_config.json`
-  - 客戶端專屬：`backend/metadata/collage_config__<client>.json`
-- 端點：
-  - `GET /api/collage-config?client=<id>`：取得配置（客戶端專屬或全域）
-  - `PUT /api/collage-config`：更新配置（可指定 `target_client_id`）
-- WebSocket 推送：更新後會廣播 `collage_config` 訊息
-- 配置參數：`images`, `image_count`, `rows`, `cols`, `mix`, `stage_width`, `stage_height`, `seed`
-
-### 4.8 camera_presets.py / iframe_config.py（視角與多面板）
-- 相機預設：`GET/POST/DELETE /api/camera-presets`（JSON 檔 `backend/metadata/camera_presets.json`）
-- Iframe 配置：
-  - `GET /api/iframe-config`：可帶 `?client=<id>` 讀取指定客戶端配置（若無則預設）
-  - `PUT /api/iframe-config`：儲存配置（可帶 `target_client_id`），並透過 WS 廣播 `iframe_config`
-  - 檔案：
-    - 全域：`backend/metadata/iframe_config.json`
-    - 客製：`backend/metadata/iframe_config__<client>.json`
+- **Gemini 影像生成（`gemini_image.py`）**：負責選取父圖、前處理（EXIF、縮放）、組合 prompt、呼叫 Gemini 並寫回 offspring + metadata。`generate_mixed_offspring_v2` 支援目標尺寸（width/height/max_side + resize_mode cover/fit）。
+- **向量庫（`vector_store.py`）**：用 OpenAI 文字嵌入 `text-embedding-3-small` 建立 Chroma collection；缺乏嵌入時會先 `caption_image` 再嵌入。提供 sweep/index 單檔/批次、搜尋、以及 `mark_deprecated_images()`（標記位於 `deprecated/` 子資料夾的圖）。
+- **親緣索引（`kinship_index.py`）**：掃描 `metadata/offspring_*.json` 抽取 parents/children，持久化為 `kinship_index.json`，提供 parents_of/children_of/siblings_of/ancestors_levels_of API，並在缺檔時自動重建。
+- **拼貼任務（`collage_version.py`）**：定義 `CollageTaskManager`（記憶體，在 5 分鐘後清除完成任務）與 PIL/Numpy 的切片邏輯、邊緣顏色比對、旋轉/抖動/seed。結果會寫 metadata + 回傳 tile mapping。
+- **配置管理**
+  - `iframe_config.py`：支援 per-client config、檔名驗證、防止 Path traversal、snapshot（存於 `metadata/snapshots/iframe_config/<client>/`）。
+  - `collage_config.py`：類似結構，回傳 `source`（default/global/client）與更新時間。
+  - `camera_presets.py`：JSON 檔案版 CRUD，並自動填入 `updated_at`。
+- **即時通訊**
+  - `realtime_bus.py`：追蹤目前 WebSocket 連線、廣播 sound/iframe/collage/subtitle/caption，並允許 target client id。
+  - `screenshot_queue.py`：以 in-memory dict 存 request 狀態，產生隨機 id，並在狀態變動時透過 `realtime_broadcaster` 發送 `screenshot_request/completed/failed/sound_effect_ready`。
+- **截圖與分析**
+  - `screenshots.py`：驗證副檔名、建立 `scene_<timestamp>_<token>.png/jpg`、回傳絕對與相對路徑。
+  - `image_analysis.py`：用 Gemini 2.5 Flash，提供 summary 與 segments，限制輸入尺寸避免超時。
+  - `api/screenshot_helpers.py`：解析 `image_path` 或 `request_id` → 實際檔案，並建議音效 prompt。
+- **音訊**
+  - `sound_effects.py`：呼叫 ElevenLabs Text-to-Sound Effects API，命名並寫 metadata（含 SHA256），支援 loop/duration/prompt influence。
+  - `tts_openai.py` + `api/sound_helpers.py`：使用 OpenAI `/v1/audio/speech` 輸出 mp3/wav/opus…，自動生成安全檔名並可在 4xx 失敗時重試（移除 instructions）。`speak-with-subtitle` 另外會呼叫 `SubtitleManager` 設定字幕並透過 WS 廣播。
+- **字幕/說明文字**：`subtitles.py`、`captions.py` 都封裝 `TimedTextManager`，支援全域或 per-client 狀態、有效時間、自動到期清除。
+- **嵌入工具（`utils/embeddings.py`）**：提供 `embed_text`、`embed_image`、`caption_image` 等共用邏輯；必要時 fallback 為「先 caption 再 embed」。
+- **共用工具**：`utils/fs.py`（確保目錄）、`utils/metadata.py`（寫 metadata、SHA256、UTC timestamp）。
 
 ---
 
-## 5. API（集中於 main.py）
+## 7. 資料流程與狀態
 
-- 健康檢查：`GET /health`
-- 圖像生成：`POST /api/generate/mix-two`（body 可選；無 body 時以 `count` query 落地）
-- 向量索引：
-  - `POST /api/index/offspring`
-  - `POST /api/index/image`
-  - `POST /api/index/batch`
-- 搜尋：
-  - `POST /api/search/text`
-  - `POST /api/search/image`
-- 親緣：`GET /api/kinship?img=<name>&depth=<N|-1>`（回傳 `parents/children/siblings/ancestors/ancestors_by_level/root_ancestors/lineage_graph`）
-- 截圖管理：
-  - `POST /api/screenshots`
-  - `POST /api/screenshots/request`
-  - `GET /api/screenshots/{request_id}`
-  - `POST /api/screenshots/{request_id}/fail`
-- 分析/音效：
-  - `POST /api/analyze-screenshot`
-  - `POST /api/sound-effects`
-  - `POST /api/screenshot/bundle`
-- 音效文件與播放：
-  - `GET /api/sound-files`（列檔）
-  - `GET /api/sound-files/{filename}`（串流）
-  - `POST /api/sound-play`（廣播 `sound_play`）
-- TTS 旁白：
-  - `POST /api/tts`（產生 TTS 音訊）
-- 拼貼生成：
-  - `POST /api/generate-collage-version`（建立拼貼生成任務）
-  - `GET /api/collage-version/{task_id}/progress`（查詢進度）
-- 拼貼配置：
-  - `GET /api/collage-config`（取得配置）
-  - `PUT /api/collage-config`（更新配置）
-- 字幕與說明文字：
-  - `GET /api/subtitles`（取得字幕）
-  - `POST /api/subtitles`（設定字幕）
-  - `DELETE /api/subtitles`（清除字幕）
-  - `GET /api/captions`（取得說明文字）
-  - `POST /api/captions`（設定說明文字）
-  - `DELETE /api/captions`（清除說明文字）
-- 多客戶端管理：
-  - `GET /api/clients`（列出在線客戶端）
-- Iframe 配置：
-  - `GET /api/iframe-config`
-  - `PUT /api/iframe-config`
-- WebSocket：`/ws/screenshots`（hello 後註冊 `client_id`，接收未完成請求補送）
+### 7.1 截圖與指令佇列
+1. 後端透過 `/api/screenshots/request` 建立 request（可帶 `client_id`）；`ScreenshotRequestQueue` 會推送 `screenshot_request` 到指定 client。
+2. 前端完成截圖後呼叫 `POST /api/screenshots`（夾帶 request_id/client_id）；成功時 queue 標記 completed，並透過 WS 發送 `screenshot_completed`。
+3. 若前端或後端失敗，可呼叫 `/api/screenshots/{id}/fail` 或 queue 自行標記失敗；狀態會在後端保留，供 `/api/screenshots/{id}` 查詢。
+4. `api/screenshot` 裡的分析/音效/bundle 也可透過 request_id 綁定——一旦音效生成成功，queue 會在 `sound_effect_ready` 事件中附上路徑，前端 SoundPlayer 得以自動載入。
+
+### 7.2 設定廣播流程
+- `/api/iframe-config` / `/api/collage-config`：寫入時會呼叫 `realtime_broadcaster.broadcast_*`，將 config 與 target client id 推給所有連線，使前端進入遠端鎖定狀態。
+- `/api/camera-presets`：雖未透過 WS 廣播，但 Kinship 前端開啟時會先拉一次清單；預設會找名為 `center` 的 preset。
+
+### 7.3 拼貼任務
+- 前端送出 `/api/generate-collage-version` 後，Router 會建立 task id、啟動 `asyncio.create_task` 跑 `generate_collage_version`（包在 `run_in_threadpool`）。
+- 任務進度透過 `progress_callback` 更新 task manager；前端以輪詢 `/progress` 方式取得 stage、message、完成後的輸出檔名/路徑/metadata。
+- 目前 task manager 為記憶體型，重啟後會遺失紀錄，且沒有長期儲存輸出檔（需自行搬運）。
+
+### 7.4 搜尋與索引
+- `/api/search/image` 允許使用任意檔案路徑；若檔案缺嵌入會在 runtime caption+embed。為提高穩定性，`_iter_offspring_images` 只接受 `offspring_dir` 下的 png/jpg。
+- `index_offspring_batch` 支援 offset/batch-size，可搭配排程分段全量索引。
+- `mark_deprecated_images`：掃描 `offspring_images/deprecated/**`，在 Chroma metadata 寫入 `deprecated=true`，供前端 optional 過濾。
+
+### 7.5 親緣資料
+- `kinship_index.build_and_save()` 根據 metadata JSON 的 `parents` 欄位建構 `parents_map` / `children_map`；查詢 `/api/kinship` 時會再檢查檔案是否存在於 `offspring_dir`，避免 metadata 遺失。
+- 回傳內容包含 `lineage_graph`、`ancestors_by_level`、`root_ancestors`。前端可用 `depth` 控制祖先層數（-1 = 無限）。
+
+### 7.6 音訊與字幕
+- `sound_play`：由 `/api/sound-play` 觸發，後端會查檔案存在並把 URL + filename 廣播。前端只需監聽 WS `sound_play`。
+- `tts` 與 `speak-with-subtitle`：執行成功後會把 `url` 回傳給呼叫端；若 `auto_play=true`，server 會透過 WS 推送 `sound_play`。`speak-with-subtitle` 另外會呼叫 `SubtitleManager` 並廣播 `subtitle_update`。
 
 ---
 
-## 6. 關鍵實作細節
+## 8. 既知限制與建議
 
-- 路徑解析（截圖/影像）：
-  - `_resolve_screenshot_path()` 嘗試 absolute、專案根、`SCREENSHOT_DIR`（含 basename）等多種候選
-  - `search_images_by_image()` 在 DB 命中時可跳過檔案存在檢查（直接查向量）
-- 併發與阻塞：
-  - 影像分析與音效生成以 `run_in_threadpool()` 包裹，避免阻塞 event loop
-  - WS 廣播採線上連線清單，傳送失敗會移除連線
-- 安全與驗證：
-  - `iframe_config` 會檢查檔名（僅允許 offspring 目錄下存在之檔）
-  - 音效檔名以 `os.path.basename` 清洗，拒絕路徑穿越
-  - 生成與上傳統一檔名規則；metadata 寫入失敗會保底處理
-- 記錄與除錯：
-  - `vector_store.py` 部分包含 `print()` 偵錯訊息；建議後續改為 logging
+- **揮發性狀態**：`ScreenshotRequestQueue`、`CollageTaskManager` 都只在記憶體中，重啟後資料會遺失；若要跨機或高可靠，建議改用 Redis/DB。
+- **缺乏權限控管**：目前所有 API（生成、索引、刪除 preset）皆無驗證；部署到公開環境前需補 auth/速率限制。
+- **觀測性**：多數服務仍以 `print()` 記錄（ex. `kinship_index`），建議改為結構化 logging。
+- **錯誤處理**：Gemini/ElevenLabs/OpenAI 呼叫的例外大多包成 `RuntimeError`/`ValueError`，但未分類告警。若要長期運行，應增加重試邏輯與告警。
+- **大型輸出管理**：拼貼任務與 Gemini 輸出只存在檔案系統，沒有提供 CDN/簽名 URL；若要遠端存取需另外串接 object storage。
 
----
-
-## 7. 部署與靜態資源
-
-- 靜態掛載：`/generated_images`, `/generated_sounds` 已在 app 啟動時 mount
-- 前端靜態：目前未整合 `frontend/dist` 到 FastAPI；可依需求 `app.mount("/", StaticFiles(...))`
-- 反向代理：可參考 `spec.md` 的 Nginx 設定（含 WebSocket 升級）
-
----
-
-## 8. 缺漏與風險
-
-- CORS：目前未加入 `CORSMiddleware`，跨源開發（vite 5173 → api 8000）須手動設定；建議儘速補上
-  - **更新**：已加入 `CORSMiddleware`，允許所有來源（開發環境）
-- 向量策略註解不一致：`vector_store.py` 檔頭仍敘述 Google 來源；實際使用 OpenAI 嵌入，需修正文檔
-- 雙語索引：`cleanup_zh.py` 僅做清理；尚未正式產生 `:zh/:en` 版本向量
-- 持久化：截圖請求目前為記憶體資料結構；若需多實例/重啟存活，建議導入 DB
-- 拼貼任務管理：`CollageTaskManager` 為記憶體實作，任務在重啟後會遺失；建議持久化或改用外部任務佇列
-
----
-
-## 9. Refactor 建議（後端）
-
-- 路由拆分：
-  - 以 FastAPI `APIRouter` 按領域分拆（search/index、kinship、screenshots、sounds、tts、collage、iframe、camera、generate）
-  - **更新**：已部分拆分為 `media_router`、`storage_router`、`realtime_router`
-- 設定與依賴：
-  - 將 `Settings` 與外部客戶端（OpenAI/Chroma/Gemini）以 DI 方式注入，便於測試
-- CORS 與中介層：
-  - 加入 `CORSMiddleware`（允許前端開發來源、允許 WS）
-- 錯誤處理與日誌：
-  - 統一 `HTTPException` 錯誤碼與訊息；移除 `print()` 改為 `logging`
-- 背景任務：
-  - 長時作業（索引/生成）可改以背景隊列（如 asyncio 任務、或 Celery/RQ 視規模）
-- 資料持久化：
-  - 對 `screenshot_requests_manager` 提供持久化（SQLite/Redis）以支援重啟容錯
-- 文件與型別：
-  - `vector_store.py` 修正檔頭註解；於 `schemas.py` 擴充回應型別（`lineage_graph` 等）
-- 安全性：
-  - 更嚴格的檔名/路徑校驗與 MIME 檢查；ElevenLabs 失敗重試/節流
-
----
-
-## 10. 驗證與維運
-
-- 健康檢查：`/health`（可擴充回報 Chroma 連線、目錄可寫等）
-- 可觀測性：導入結構化日誌與指標（請求耗時、Queue 深度、WS 連線數）
-- 測試：
-  - 單元：vector_store（索引/查詢/回退）、iframe_config 驗證、screenshots 存取
-  - 整合：`/api/screenshot/bundle` 端到端（假資料或打 stub）
-
----
-
-（文件結束）
+以上覆蓋目前 `backend/` 主要模組與資料流程，可做為前後端協作與 debugging 的參考地圖。
